--- a/index-ar.html
+++ b/index-ar.html
@@ -119,30 +119,14 @@
                                     <li>
                                         <a href="about.html">من نحن</a>
                                     </li>
-                                    <!-- <li class="dropdown">
-                                        <a href="#">Pages</a>
-                                        <ul>
-                                            <li><a href="team.html">Team</a></li>
-                                            <li><a href="team-carousel.html">Team Carosuel</a></li>
-                                            <li><a href="team-details.html">Team Details</a></li>
-                                            <li><a href="projects.html">Projects</a></li>
-                                            <li><a href="projects-carousel.html">Projects Carousel</a></li>
-                                            <li><a href="project-details.html">Project Details</a></li>
-                                            <li><a href="testimonials.html">Testimonials</a></li>
-                                            <li><a href="testimonials-carousel.html">Testimonials Carousel</a></li>
-                                            <li><a href="pricing.html">Pricing</a></li>
-                                            <li><a href="pricing-carousel.html">Pricing Carousel</a></li>
-                                            <li><a href="gallery.html">Gallery</a></li>
-                                            <li><a href="faq.html">Faq</a></li>
-                                            <li><a href="404.html">404 Error</a></li>
-                                        </ul>
-                                    </li> -->
                                     <li><a href="services.html">الخدمات</a></li>
-                                    <!-- <li><a href="news.html">News</a></li> -->
                                     <li>
                                         <a href="contact.html">اتصل بنا</a>
                                     </li>
                                 </ul>
+                            </div>
+                            <div class="main-menu-two__btn-box d-md-none d-sm-block">
+                                <a href="index.html" class="main-menu-two__btn thm-btn">En</a>
                             </div>
                         </div>
                         <div class="main-menu-two__right">
@@ -1170,7 +1154,7 @@
                       donec tren conubian
                     </p>
                     <div class="footer-widget__emergency-call">
-                      <p>Emergency</p>
+                      <p>اتصل الآن</p>
                       <a href="tel:+201013714343">+20 101 3714 343</a>
                     </div>
                   </div>
@@ -1185,22 +1169,22 @@
                     </div>
                     <ul class="footer-widget__services-list list-unstyled">
                       <li>
-                        <a href="about.html">تجربة العملاء</a>
+                        <a href="about.html">التأمينات الإجتماعية</a>
                       </li>
                       <li>
-                        <a href="about.html">استراتيجية الأعمال</a>
+                        <a href="about.html">هيكلة الأجور التأمينية</a>
                       </li>
                       <li>
-                        <a href="about.html">تطوير القيادة</a>
+                        <a href="about.html">إستشارات الموارد البشرية</a>
                       </li>
                       <li>
-                        <a href="about.html">تغيير الثقافة</a>
+                        <a href="about.html">إنهاء تراخيص عمل الأجانب</a>
                       </li>
                       <li>
-                        <a href="about.html">الهندسة والتحسين</a>
+                        <a href="about.html">التأمين الصحي</a>
                       </li>
                       <li>
-                        <a href="about.html">الموارد البشرية</a>
+                        <a href="about.html">الخدمة المهنية</a>
                       </li>
                     </ul>
                   </div>
@@ -1223,8 +1207,8 @@
                       <li>
                         <p class="footer-widget__contact-title">العنوان</p>
                         <p class="footer-widget__contact-location">
-                          Villa 14,72 St. <br />
-                          Maadi - Cairo
+                          فيلا 14,72 شارع <br />
+                          المعادي - القاهرة
                         </p>
                       </li>
                     </ul>
