--- a/about.html
+++ b/about.html
@@ -384,7 +384,7 @@
                             </div> -->
                 <div class="about-two__img-inner">
                   <img
-                    src="assets/images/resources/about-two-img-1.jpg"
+                    src="assets/images/vectors/aboutus.png"
                     alt="Image"
                   />
                   <!-- <div class="about-two__img-video">
@@ -925,7 +925,7 @@
               >
                 <div class="progress-two__img">
                   <img
-                    src="assets/images/resources/progress-two-img-1.jpg"
+                    src="assets/images/vectors/Business solution-pana.png"
                     alt=""
                   />
                 </div>
