--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                                 <h3>2020 year 21st Bangladesh <br>Business Awards.</h3>
                             </div> -->
                             <div class="about-two__img-inner">
-                                <img src="assets/images/resources/about-two-img-1.jpg" alt="Image">
+                                <img src="assets/images/vectors/Business deal-pana.png" alt="Image">
                                 <!-- <div class="about-two__img-video">
                                     <a href="https://www.youtube.com/shorts/cVfi3L9t7nA" class="video-popup">
                                         <div class="about-two__img-video-icon">
@@ -622,9 +622,9 @@
                         <div class="faq-one__left wow fadeInLeft" data-wow-delay="300ms">
                             <div class="faq-one__img-box">
                                 <div class="faq-one__img">
-                                    <img src="assets/images/resources/faq-one-img-1.jpg" alt="">
+                                    <img src="assets/images/vectors/Business solution-amico.png" alt="">
                                 </div>
-                                <div class="faq-one__img-shape-1"></div>
+                                <!-- <div class="faq-one__img-shape-1"></div> -->
                             </div>
                         </div>
                     </div>
