--- a/index-ar.html
+++ b/index-ar.html
@@ -855,7 +855,7 @@
 
         <!--Project Two Start -->
         <section class="project-two">
-            <div class="container">
+            <div class="container pb-5">
                 <div class="project-two__inner">
                     <div class="project-two__top">
                         <div class="project-two__left">
@@ -1024,6 +1024,97 @@
             </div>
         </section>
         <!--Project Two End -->
+
+      <!--Why Choose Us Start -->
+      <section class="how-it-work mt-5 pt-5">
+        <div class="container">
+          <div class="section-title text-center">
+            <div class="section-title__tagline-box">
+              <p class="section-title__tagline">لماذا تختارنا ؟</p>
+            </div>
+            <h2 class="section-title__title">طريقة العمل لدينا</h2>
+          </div>
+          <div class="row">
+            <!--How It Work Single Start-->
+            <div
+              class="col-xl-3 col-lg-6 col-md-6 wow fadeInLeft"
+              data-wow-delay="300ms"
+            >
+              <div class="how-it-work__single">
+                <div class="how-it-work__icon">
+                  <div class="how-it-work__icon-shape"></div>
+                  <span class="icon-wind-mill"></span>
+                </div>
+                <h3 class="how-it-work__title">
+                  <a href="about.html">فرق ذات خبرة</a>
+                </h3>
+                <p class="how-it-work__text">
+                  تتمتع فرقنا بأكثر من 20 عامًا من الخبرة في مجالات الموارد البشرية والاستشارات لمساعدتك في تلبية احتياجاتك.
+                </p>
+              </div>
+            </div>
+            <!--How It Work Single End-->
+            <!--How It Work Single Start-->
+            <div
+              class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp"
+              data-wow-delay="300ms"
+            >
+              <div class="how-it-work__single-2">
+                <h3 class="how-it-work__title">
+                  <a href="about.html">السرية والأمان</a>
+                </h3>
+                <p class="how-it-work__text">
+                  نحن نفهم أهمية السرية والأمان، ونتخذ جميع الإجراءات اللازمة لضمان سلامة بياناتك ومعلوماتك.
+                </p>
+                <div class="how-it-work__icon">
+                  <div class="how-it-work__icon-shape"></div>
+                  <span class="icon-consulting"></span>
+                </div>
+              </div>
+            </div>
+            <!--How It Work Single End-->
+            <!--How It Work Single Start-->
+            <div
+              class="col-xl-3 col-lg-6 col-md-6 wow fadeInDown"
+              data-wow-delay="300ms"
+            >
+              <div class="how-it-work__single">
+                <div class="how-it-work__icon">
+                  <div class="how-it-work__icon-shape"></div>
+                  <span class="icon-benefit"></span>
+                </div>
+                <h3 class="how-it-work__title">
+                  <a href="about.html">التحكم في التكاليف والوقت</a>
+                </h3>
+                <p class="how-it-work__text">
+                  نحن نساعد عملك على التحكم في التكاليف وتوفير الوقت، ونمكن شركتك من الاستثمار في قدراتها الأساسية ونموها.
+                </p>
+              </div>
+            </div>
+            <!--How It Work Single End-->
+            <!--How It Work Single Start-->
+            <div
+              class="col-xl-3 col-lg-6 col-md-6 wow fadeInRight"
+              data-wow-delay="300ms"
+            >
+              <div class="how-it-work__single-2">
+                <h3 class="how-it-work__title">
+                  <a href="about.html">حلول مخصصة</a>
+                </h3>
+                <p class="how-it-work__text">
+                  نحن نقدم حلولًا مخصصة مصممة لتلبية الاحتياجات الفريدة لكل عميل بناءً على حجم الشركة والصناعة وعوامل أخرى.
+                </p>
+                <div class="how-it-work__icon">
+                  <div class="how-it-work__icon-shape"></div>
+                  <span class="icon-solving"></span>
+                </div>
+              </div>
+            </div>
+            <!--How It Work Single End-->
+          </div>
+        </div>
+      </section>
+      <!--Why Choose Us End -->
 
         <!--Brand Two Start-->
         <section class="brand-one brand-two">
@@ -1292,6 +1383,8 @@
     <!-- /.search-popup -->
 
     <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fas fa-arrow-up"></i></a>
+    <!-- WhatsApp -->
+    <a href="#" class="whatsapp"><i class="fab fa-whatsapp fa-2x"></i></a>
 
 
     <script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
