--- a/index-ar.html
+++ b/index-ar.html
@@ -1123,10 +1123,8 @@
                     <div class="section-title-two__tagline-box">
                         <p class="section-title-two__tagline">شركتنا الراضية</p>
                     </div>
-                    <h2 class="section-title-two__title">عملاء موثوقون عالميًا</h2>
+                    <h2 class="section-title-two__title">بعض عملائنا</h2>
                 </div>
-                <!-- <p class="brand-two__text">Consequat dapibus duis nunc taciti nascetur pede pulvinar penatibus taciti
-                    leo hymenaeos<br> manchester road libero cras dis eget magnis nulla corporte ornare</p> -->
                 <div class="brand-one__inner">
                     <div class="thm-swiper__slider swiper-container" data-swiper-options='{"spaceBetween": 100,
                     "slidesPerView": 5,
@@ -1135,7 +1133,7 @@
                         "nextEl": "#brand-one__swiper-button-next",
                         "prevEl": "#brand-one__swiper-button-prev"
                     },
-                    "autoplay": { "delay": 5000 },
+                    "autoplay": { "delay": 2000 },
                     "breakpoints": {
                         "0": {
                             "spaceBetween": 30,
@@ -1164,40 +1162,40 @@
                     }}'>
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/brand-1-1.png" alt="">
+                                <img src="assets/images/brand/ELSWEDY.png" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/brand-1-2.png" alt="">
+                                <img src="assets/images/brand/ALKAN.png" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/brand-1-3.png" alt="">
+                                <img src="assets/images/brand/bet-kheprA.png" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/brand-1-4.png" alt="">
+                                <img src="assets/images/brand/BRITSH.png" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/brand-1-5.png" alt="">
+                                <img src="assets/images/brand/LOREAL.png" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/brand-1-6.png" alt="">
+                                <img src="assets/images/brand/MASAR.png" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/brand-1-1.png" alt="">
+                                <img src="assets/images/brand/MIT.png" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/brand-1-2.png" alt="">
+                                <img src="assets/images/brand/MITSUBISHI.png" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/brand-1-3.png" alt="">
+                                <img src="assets/images/brand/NEXT-CARE.png" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/brand-1-4.png" alt="">
+                                <img src="assets/images/brand/RINA.png" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/brand-1-5.png" alt="">
+                                <img src="assets/images/brand/GORMET.png" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/brand-1-6.png" alt="">
+                                <img src="assets/images/brand/DOF.png" alt="">
                             </div><!-- /.swiper-slide -->
                         </div>
                     </div>
