--- a/index.html
+++ b/index.html
@@ -729,8 +729,8 @@
                             </div>
                             <div class="about-two__content-title">
                                 <h3>The training course on Social Insurance Law No. 148 of 2019 aims to educate
-Human Resources employees about updates to the new law. Through this course,
-participants will be trained and learn about:</h3>
+                                    Human Resources employees about updates to the new law. Through this course,
+                                    participants will be trained and learn about:</h3>
                             </div>
                             <div class="about-two__content-inner">
                                 <div class="row">
@@ -1109,7 +1109,7 @@ participants will be trained and learn about:</h3>
         <div class="container">
           <div class="section-title text-center">
             <div class="section-title__tagline-box">
-              <p class="section-title__tagline">Why Choose Us</p>
+              <p class="section-title__tagline">Why Choose Us ?</p>
             </div>
             <h2 class="section-title__title">Our Working Process</h2>
           </div>
@@ -1462,7 +1462,7 @@ participants will be trained and learn about:</h3>
 
     <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fas fa-arrow-up"></i></a>
     <!-- WhatsApp -->
-    <a href="#" class="whatsapp"><i class="fab fa-whatsapp fa-2x"></i></a>
+    <a href="https://wa.me/201013714343" target="_blank" class="whatsapp"><i class="fab fa-whatsapp fa-2x"></i></a>
 
 
     <script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
