--- a/index-ar.html
+++ b/index-ar.html
@@ -1382,7 +1382,7 @@
 
     <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fas fa-arrow-up"></i></a>
     <!-- WhatsApp -->
-    <a href="#" class="whatsapp"><i class="fab fa-whatsapp fa-2x"></i></a>
+    <a href="https://wa.me/201013714343" target="_blank" class="whatsapp"><i class="fab fa-whatsapp fa-2x"></i></a>
 
 
     <script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
