--- a/about.html
+++ b/about.html
@@ -8,19 +8,19 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/images/favicons/apple-touch-icon.png"
+      href="assets/images/resources/logo-4.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/images/favicons/favicon-32x32.png"
+      href="assets/images/resources/logo-4.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/images/favicons/favicon-16x16.png"
+      href="assets/images/resources/logo-4.png"
     />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
     <meta
@@ -136,9 +136,9 @@
                 <div class="main-menu-two__logo">
                   <a href="index.html"
                     ><img
-                      src="assets/images/resources/logo-3.png"
+                      src="assets/images/resources/logo-4.png"
                       alt=""
-                      width="200px"
+                      width="75px"
                   /></a>
                 </div>
                 <div class="main-menu-two__main-menu-box">
@@ -383,10 +383,7 @@
                                 <h3>2020 year 21st Bangladesh <br>Business Awards.</h3>
                             </div> -->
                 <div class="about-two__img-inner">
-                  <img
-                    src="assets/images/vectors/aboutus.png"
-                    alt="Image"
-                  />
+                  <img src="assets/images/vectors/aboutus.png" alt="Image" />
                   <!-- <div class="about-two__img-video">
                                     <a href="https://www.youtube.com/shorts/cVfi3L9t7nA" class="video-popup">
                                         <div class="about-two__img-video-icon">
@@ -997,110 +994,90 @@
 
       <!--Brand Two Start-->
       <section class="brand-one brand-two">
-        <div class="container">
-          <div class="section-title-two text-center">
-            <div class="section-title-two__tagline-box">
-              <p class="section-title-two__tagline">our satisfied company</p>
+            <div class="container">
+                <div class="section-title-two text-center">
+                    <div class="section-title-two__tagline-box">
+                        <p class="section-title-two__tagline">our satisfied company</p>
+                    </div>
+                    <h2 class="section-title-two__title">Some Of Our Clients</h2>
+                </div>
+                <div class="brand-one__inner">
+                    <div class="thm-swiper__slider swiper-container" data-swiper-options='{"spaceBetween": 100,
+                    "slidesPerView": 5,
+                    "loop": true,
+                    "navigation": {
+                        "nextEl": "#brand-one__swiper-button-next",
+                        "prevEl": "#brand-one__swiper-button-prev"
+                    },
+                    "autoplay": { "delay": 2000 },
+                    "breakpoints": {
+                        "0": {
+                            "spaceBetween": 30,
+                            "slidesPerView": 1
+                        },
+                        "375": {
+                            "spaceBetween": 30,
+                            "slidesPerView": 2
+                        },
+                        "575": {
+                            "spaceBetween": 30,
+                            "slidesPerView": 3
+                        },
+                        "767": {
+                            "spaceBetween": 50,
+                            "slidesPerView": 4
+                        },
+                        "991": {
+                            "spaceBetween": 50,
+                            "slidesPerView": 5
+                        },
+                        "1199": {
+                            "spaceBetween": 100,
+                            "slidesPerView": 6
+                        }
+                    }}'>
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img src="assets/images/brand/ELSWEDY.png" alt="">
+                            </div><!-- /.swiper-slide -->
+                            <div class="swiper-slide">
+                                <img src="assets/images/brand/ALKAN.png" alt="">
+                            </div><!-- /.swiper-slide -->
+                            <div class="swiper-slide">
+                                <img src="assets/images/brand/bet-kheprA.png" alt="">
+                            </div><!-- /.swiper-slide -->
+                            <div class="swiper-slide">
+                                <img src="assets/images/brand/BRITSH.png" alt="">
+                            </div><!-- /.swiper-slide -->
+                            <div class="swiper-slide">
+                                <img src="assets/images/brand/LOREAL.png" alt="">
+                            </div><!-- /.swiper-slide -->
+                            <div class="swiper-slide">
+                                <img src="assets/images/brand/MASAR.png" alt="">
+                            </div><!-- /.swiper-slide -->
+                            <div class="swiper-slide">
+                                <img src="assets/images/brand/MIT.png" alt="">
+                            </div><!-- /.swiper-slide -->
+                            <div class="swiper-slide">
+                                <img src="assets/images/brand/MITSUBISHI.png" alt="">
+                            </div><!-- /.swiper-slide -->
+                            <div class="swiper-slide">
+                                <img src="assets/images/brand/NEXT-CARE.png" alt="">
+                            </div><!-- /.swiper-slide -->
+                            <div class="swiper-slide">
+                                <img src="assets/images/brand/RINA.png" alt="">
+                            </div><!-- /.swiper-slide -->
+                            <div class="swiper-slide">
+                                <img src="assets/images/brand/GORMET.png" alt="">
+                            </div><!-- /.swiper-slide -->
+                            <div class="swiper-slide">
+                                <img src="assets/images/brand/DOF.png" alt="">
+                            </div><!-- /.swiper-slide -->
+                        </div>
+                    </div>
+                </div>
             </div>
-            <h2 class="section-title-two__title">Worldwide trusted client</h2>
-          </div>
-          <p class="brand-two__text">
-            Consequat dapibus duis nunc taciti nascetur pede pulvinar penatibus
-            taciti leo hymenaeos<br />
-            manchester road libero cras dis eget magnis nulla corporte ornare
-          </p>
-          <div class="brand-one__inner">
-            <div
-              class="thm-swiper__slider swiper-container"
-              data-swiper-options='{"spaceBetween": 100,
-                "slidesPerView": 5,
-                "loop": true,
-                "navigation": {
-                    "nextEl": "#brand-one__swiper-button-next",
-                    "prevEl": "#brand-one__swiper-button-prev"
-                },
-                "autoplay": { "delay": 5000 },
-                "breakpoints": {
-                    "0": {
-                        "spaceBetween": 30,
-                        "slidesPerView": 1
-                    },
-                    "375": {
-                        "spaceBetween": 30,
-                        "slidesPerView": 2
-                    },
-                    "575": {
-                        "spaceBetween": 30,
-                        "slidesPerView": 3
-                    },
-                    "767": {
-                        "spaceBetween": 50,
-                        "slidesPerView": 4
-                    },
-                    "991": {
-                        "spaceBetween": 50,
-                        "slidesPerView": 5
-                    },
-                    "1199": {
-                        "spaceBetween": 100,
-                        "slidesPerView": 6
-                    }
-                }}'
-            >
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/brand-1-1.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/brand-1-2.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/brand-1-3.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/brand-1-4.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/brand-1-5.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/brand-1-6.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/brand-1-1.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/brand-1-2.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/brand-1-3.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/brand-1-4.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/brand-1-5.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/brand-1-6.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+        </section>
       <!--Brand Two End-->
 
       <!--Site Footer Start-->
@@ -1276,9 +1253,13 @@
     </div>
     <!-- /.search-popup -->
 
-    <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fas fa-arrow-up"></i></a>
+    <a href="#" data-target="html" class="scroll-to-target scroll-to-top"
+      ><i class="fas fa-arrow-up"></i
+    ></a>
     <!-- WhatsApp -->
-    <a href="https://wa.me/201013714343" target="_blank" class="whatsapp"><i class="fab fa-whatsapp fa-2x"></i></a>
+    <a href="https://wa.me/201013714343" target="_blank" class="whatsapp"
+      ><i class="fab fa-whatsapp fa-2x"></i
+    ></a>
 
     <script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
     <script src="assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
