--- a/about.html
+++ b/about.html
@@ -110,6 +110,14 @@
                   </p>
                 </div>
               </li>
+              <li>
+                <div class="icon">
+                  <i class="icon-phone-1"></i>
+                </div>
+                <div class="text">
+                  <p><a href="tel:0227510396">02 275 10 396</a></p>
+                </div>
+              </li>
             </ul>
             <!-- <div class="main-header-two__top-right">
               <ul class="main-header-two__social list-unstyled">
@@ -184,6 +192,11 @@
                       <a href="contact.html">Contact</a>
                     </li>
                   </ul>
+                  <div class="main-menu-two__btn-box d-md-none d-sm-block">
+                    <a href="index-ar.html" class="main-menu-two__btn thm-btn"
+                      >Ar</a
+                    >
+                  </div>
                 </div>
               </div>
               <div class="main-menu-two__right">
@@ -994,15 +1007,17 @@
 
       <!--Brand Two Start-->
       <section class="brand-one brand-two">
-            <div class="container">
-                <div class="section-title-two text-center">
-                    <div class="section-title-two__tagline-box">
-                        <p class="section-title-two__tagline">our satisfied company</p>
-                    </div>
-                    <h2 class="section-title-two__title">Some Of Our Clients</h2>
-                </div>
-                <div class="brand-one__inner">
-                    <div class="thm-swiper__slider swiper-container" data-swiper-options='{"spaceBetween": 100,
+        <div class="container">
+          <div class="section-title-two text-center">
+            <div class="section-title-two__tagline-box">
+              <p class="section-title-two__tagline">our satisfied company</p>
+            </div>
+            <h2 class="section-title-two__title">Some Of Our Clients</h2>
+          </div>
+          <div class="brand-one__inner">
+            <div
+              class="thm-swiper__slider swiper-container"
+              data-swiper-options='{"spaceBetween": 100,
                     "slidesPerView": 5,
                     "loop": true,
                     "navigation": {
@@ -1035,49 +1050,62 @@
                             "spaceBetween": 100,
                             "slidesPerView": 6
                         }
-                    }}'>
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <img src="assets/images/brand/ELSWEDY.png" alt="">
-                            </div><!-- /.swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="assets/images/brand/ALKAN.png" alt="">
-                            </div><!-- /.swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="assets/images/brand/bet-kheprA.png" alt="">
-                            </div><!-- /.swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="assets/images/brand/BRITSH.png" alt="">
-                            </div><!-- /.swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="assets/images/brand/LOREAL.png" alt="">
-                            </div><!-- /.swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="assets/images/brand/MASAR.png" alt="">
-                            </div><!-- /.swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="assets/images/brand/MIT.png" alt="">
-                            </div><!-- /.swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="assets/images/brand/MITSUBISHI.png" alt="">
-                            </div><!-- /.swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="assets/images/brand/NEXT-CARE.png" alt="">
-                            </div><!-- /.swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="assets/images/brand/RINA.png" alt="">
-                            </div><!-- /.swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="assets/images/brand/GORMET.png" alt="">
-                            </div><!-- /.swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="assets/images/brand/DOF.png" alt="">
-                            </div><!-- /.swiper-slide -->
-                        </div>
-                    </div>
+                    }}'
+            >
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/ELSWEDY.png" alt="" />
                 </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/ALKAN.png" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/bet-kheprA.png" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/BRITSH.png" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/LOREAL.png" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/MASAR.png" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/MIT.png" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/MITSUBISHI.png" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/NEXT-CARE.png" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/RINA.png" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/GORMET.png" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/DOF.png" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+              </div>
             </div>
-        </section>
+          </div>
+        </div>
+      </section>
       <!--Brand Two End-->
 
       <!--Site Footer Start-->
