--- a/index-ar.html
+++ b/index-ar.html
@@ -79,6 +79,14 @@
                                 <p><a href="mailto:info@indexconsultation.com">info@indexconsultation.com</a></p>
                             </div>
                         </li>
+                        <li>
+                            <div class="icon">
+                                <i class="icon-phone-1"></i>
+                            </div>
+                            <div class="text">
+                                <p><a href="tel:0227510396">02 275 10 396</a></p>
+                            </div>
+                        </li>
                     </ul>
                     <!-- <div class="main-header-two__top-right">
                         <div class="main-header-two__top-opening-hours">
@@ -124,9 +132,9 @@
                                         <a href="contact.html">اتصل بنا</a>
                                     </li>
                                 </ul>
-                            </div>
-                            <div class="main-menu-two__btn-box d-md-none d-sm-block">
-                                <a href="index.html" class="main-menu-two__btn thm-btn">En</a>
+                                <div class="main-menu-two__btn-box d-md-none d-sm-block">
+                                    <a href="index.html" class="main-menu-two__btn thm-btn">En</a>
+                                </div>
                             </div>
                         </div>
                         <div class="main-menu-two__right">
