--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
                                 <p><a href="mailto:info@indexconsultation.com">info@indexconsultation.com</a></p>
                             </div>
                         </li>
+                        <li>
+                            <div class="icon">
+                                <i class="icon-phone-1"></i>
+                            </div>
+                            <div class="text">
+                                <p><a href="tel:0227510396">02 275 10 396</a></p>
+                            </div>
+                        </li>
                     </ul>
                     <!-- <div class="main-header-two__top-right">
                         <div class="main-header-two__top-opening-hours">
@@ -142,6 +150,9 @@
                                         <a href="contact.html">Contact Us</a>
                                     </li>
                                 </ul>
+                                <div class="main-menu-two__btn-box d-md-none d-sm-block">
+                                    <a href="index-ar.html" class="main-menu-two__btn thm-btn">Ar</a>
+                                </div>
                             </div>
                         </div>
                         <div class="main-menu-two__right">
